# DS

./: .gitignore  CMakeLists.txt
List/DoubleDirectionListWithHead/: DoubleDirectionListWithHead.c
List/basicList/: List.c  Node.c
List/basicListWithHead/: ListWithHead.c
cbasic/: main.c  pointerPractice.c
sort/: Sort.c
